--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
         "experimentalDecorators": true,
         "sourceMap": true,
         "noImplicitAny": true,
-        "declaration": true
+        "declaration": true,
+        "baseUrl": ".",
+        "paths": {
+            "@Common/*": ["SharedKernel/Common/*"]
+        }
     },
     "exclude": [
         "build",
