--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@types/node": "10.5.5",
     "@types/pg": "7.4.11",
     "@types/pg-promise": "5.4.3",
+    "@types/ramda": "^0.25.50",
     "@types/sinon": "7.0.3",
     "chai": "4.1.2",
     "mocha": "5.2.0",
     "nodemon": "1.18.7",
+    "ramda": "^0.26.1",
     "shelljs": "0.8.3",
     "sinon": "7.2.2",
+    "ts-nameof": "^3.0.1",
     "ts-node": "7.0.0",
     "tsconfig-paths": "^3.8.0",
     "typescript": "3.0.1"
